--- a/lingoappTcc/app/src/main/AndroidManifest.xml
+++ b/lingoappTcc/app/src/main/AndroidManifest.xml
@@ -9,42 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Lingoapp1">
-        <activity
-            android:name=".atividades.turmas.RespostasAtividadeActivity"
-            android:exported="false" />
-        <activity
-            android:name=".atividades.turmas.DesempenhoEstudanteActivity"
-            android:exported="false" />
-        <activity
-            android:name=".atividades.turmas.GerenciarTurmaActivity"
-            android:exported="false" />
-        <activity
-            android:name=".atividades.turmas.TurmaSelecionadaActivity"
-            android:exported="false" />
-        <activity
-            android:name=".atividades.turmas.ParticiparTurmaEstudanteActivity"
-            android:exported="false" />
-        <activity
-            android:name=".atividades.turmas.AbaTurmasEstudanteActivity"
-            android:exported="true" />
-        <activity
-            android:name=".atividades.cadastroelogin.RecuperarSenhaActivity"
-            android:exported="true" />
-        <activity
-            android:name=".atividades.cadastroelogin.LoginProfessorActivity"
-            android:exported="true" />
-        <activity
-            android:name=".atividades.cadastroelogin.LoginEstudanteActivity"
-            android:exported="true" />
-        <activity
-            android:name=".atividades.cadastroelogin.ConfirmarEmailActivity"
-            android:exported="true" />
-        <activity
-            android:name=".atividades.cadastroelogin.CadastroProfessor2Activity"
-            android:exported="true" />
-        <activity
-            android:name=".atividades.cadastroelogin.CadastroEstudante2Activity"
-            android:exported="true" />
+
         <activity
             android:name=".atividades.cadastroelogin.PaginaInicialActivity"
             android:exported="true">
@@ -61,7 +26,94 @@
             android:name=".atividades.cadastroelogin.CadastroEstudante1Activity"
             android:exported="true" />
         <activity
+            android:name=".atividades.cadastroelogin.CadastroEstudante2Activity"
+            android:exported="true" />
+        <activity
             android:name=".atividades.cadastroelogin.CadastroProfessor1Activity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.cadastroelogin.CadastroProfessor2Activity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.cadastroelogin.ConfirmarEmailActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.cadastroelogin.LoginEstudanteActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.cadastroelogin.LoginProfessorActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.cadastroelogin.RecuperarSenhaActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.turmas.AbaTurmasEstudanteActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.atividades.AbaAtividadesEstudanteActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.perfil.AbaPerfilEstudanteActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.turmas.AbaTurmasProfessorActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.atividades.AbaAtividadesProfessorActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.perfil.AbaPerfilProfessorActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.turmas.CriarTurmaProfessorActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.turmas.DesempenhoEstudanteActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.turmas.GerenciarTurmaActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.turmas.ParticiparTurmaEstudanteActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.turmas.RespostasAtividadeActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.turmas.TurmaSelecionadaActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.atividades.AtividadesAluno2Activity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.atividades.AtividadesAlunoActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.atividades.AtividadesProfessorActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.atividades.CriarAtividadeActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.atividades.EditarAtividadeActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.atividades.PagTarefaAlunoActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.atividades.VizuTarefaProfActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.perfil.AlterarDadosEstudanteActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.perfil.AlterarDadosProfessorActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.perfil.ConquistasEstudanteActivity"
+            android:exported="true" />
+        <activity
+            android:name=".atividades.perfil.HistoricoAtividadesEstudanteActivity"
             android:exported="true" />
 
         <meta-data
