--- a/lingoappTcc/app/build.gradle
+++ b/lingoappTcc/app/build.gradle
@@ -21,6 +21,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildFeatures{
+        viewBinding true
+
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -29,6 +35,7 @@ android {
 
 dependencies {
 
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.google.android.material:material:1.1.0'
